<resources>
    <string name="app_name">Sucelloz</string>
    <string name="home_name">Home</string>
    <string name="spendings_name">Spendings</string>
    <string name="savings_name">Savings</string>
    <string name="zero_budget_name">Zero Budget</string>
    <string name="my_categories_button_home_name">My Categories</string>
    <string name="add_spending_button_home_name">Add Spending</string>
    <string name="add_savings_button_home_name">Add Savings</string>
    <string name="my_categories_name">My Categories</string>
    <string name="add_category_name">Add category</string>
    <string name="categories_text">Element</string>
    <string name="sub_categories_text">Element</string>
    <string name="sub_categories_name">Sub Categories</string>
    <string name="name_spending">Name</string>
    <string name="date_spending">Date</string>
    <string name="amount_spending">Amount</string>
    <string name="ok_spending">Add</string>
    <string name="cancel_spending">Cancel</string>
    <string name="title_spending">Add a spending</string>
    <string name="name_savings">Name</string>
    <string name="date_savings">Due date</string>
    <string name="goal_savings">Goal</string>
    <string name="ok_savings">Add</string>
    <string name="cancel_savings">Cancel</string>
    <string name="title_savings">Add savings</string>
    <string name="title_category">Add a category</string>
    <string name="ok_category">Add</string>
    <string name="cancel_category">Cancel</string>
    <string name="name_category">Name</string>
    <string name="add_subcategory_name">Add subcategory</string>
    <string name="logs_name">LOGS</string>
    <string name="title_subcategory">Add a subcategory</string>
    <string name="name_subcategory">Name</string>
    <string name="spendings_name_text_view">Spendings</string>
    <string name="spendings_date_text_view">01/01/00</string>
    <string name="spendings_amount_text_view">XXX€</string>
    <string name="savings_name_text_view">Savings</string>
    <string name="savings_deadline_text_view">Until : 01/01/00</string>
    <string name="savings_amount_text_view">XXX/XXX€</string>
    <string name="check_box_spending">Positive ?</string>
    <string name="spendings_sub_category_text_view">SubCategory</string>
    <string name="modify_menu_item_name">Modify</string>
    <string name="delete_menu_item_name">Delete</string>
    <string name="stable_name_text_view">Stable</string>
    <string name="stable_date_text_view">01/01/00</string>
    <string name="stable_amount_text_view">XXX€</string>
    <string name="sub_zero_budget_name">Sub Zero Budget</string>
    <string name="amount_stable">Amount</string>
</resources>