<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_always_landscape_portrait"
        android:title="@string/home_name"
        android:visible="true" />
    <item
        android:id="@+id/navigation_spendings"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/spendings_name"
        android:visible="true" />
    <item
        android:id="@+id/navigation_savings"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/savings_name" />
    <item
        android:id="@+id/navigation_zero_budget"
        android:icon="@android:drawable/ic_lock_idle_lock"
        android:title="@string/zero_budget_name" />
</menu>