<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/icon_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_home_work_black_48dp"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/spendings_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/spendings_name_text_view"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/icon_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spendings_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/spendings_date_text_view"
        app:layout_constraintStart_toEndOf="@+id/icon_image_view"
        app:layout_constraintTop_toBottomOf="@+id/spendings_name_text_view" />

    <TextView
        android:id="@+id/spendings_amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:text="@string/spendings_amount_text_view"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spendings_subcategory_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/spendings_sub_category_text_view"
        app:layout_constraintStart_toEndOf="@+id/spendings_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/spendings_name_text_view" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/icon_image_view" />
</androidx.constraintlayout.widget.ConstraintLayout>