<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/background_circle_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/background_circle"
        app:layout_constraintBottom_toTopOf="@+id/my_categories_button_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logs_button_home"
        android:layout_width="146dp"
        android:layout_height="72dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/logs_name"
        android:textColor="@color/white"
        app:backgroundTint="#03dac5"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/background_circle_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#26A69A" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/my_categories_button_home"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginTop="256dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/my_categories_button_home_name"
        android:textColor="@color/black"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#80CBC4"
        app:strokeColor="#4DB6AC"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_spending_button_home"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_spending_button_home_name"
        android:textColor="@color/black"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="@+id/my_categories_button_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/my_categories_button_home"
        app:layout_constraintTop_toBottomOf="@+id/my_categories_button_home"
        app:rippleColor="#80CBC4"
        app:strokeColor="#4DB6AC"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_savings_button_home"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_bold"

        android:text="@string/add_savings_button_home_name"
        android:textColor="@color/black"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="@+id/add_spending_button_home"
        app:layout_constraintStart_toStartOf="@+id/add_spending_button_home"
        app:layout_constraintTop_toBottomOf="@+id/add_spending_button_home"
        app:rippleColor="#80CBC4"
        app:strokeColor="#4DB6AC"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>